# 1_chatgfp

./: .gitignore  alembic.ini  create_virtual_environment_with_permission_fix.txt  main.py  project_tree_too_large_size_information.py  project_tree_view.py  project_tree_view_result.txt  project_tree_view_result_last_10_files_only.txt  pyproject.toml  pyrightconfig.json  requirements.txt
Next_Steps/: 1. Efficient Vector Similarity Search.md
alembic/: env.py
database/: alembic.ini  database.py  models.py
database/alembic/: env.py
descriptions_overviews/: ChatGFP Project Status Overview.md  FCA Data Preparation Project Summary.md
fca_categorization.egg-info/: PKG-INFO  SOURCES.txt
fca_queries/: conftest.py  test_api.py  test_auth.py  test_business_logic.py  test_data.py  test_models.py
fca_sequence_scripts/: 1_project_overview.md  2_api_specification.md  3_testing_implementation.md  4_authentication_system.md  5_project_progress.md  6_database_design.md  7_database_setup.md  8_windows_postgresql_installation.md
postgres/: postgres_health.py  postgres_monitor.py
scripts/: analyze_core_structure.py  analyze_implementation.py  analyze_structure.py  cleanup_structure.py  code_migrator.py  create_project_structure.py  create_safe_structure.py  create_step_structure.py  detailed_analysis.py  list_project_structure.py  migrate_code.py  migrate_code_to_steps.py  reorganize_project.py  run_with_venv.ps1  safe_cleanup_structure.py  setup_project.ps1  structure_verifyer.py  test_rag_system.py  verify_structure.py
src/: project_tree_view_result.txt  (+1 more)
(+28 files in other folders)
